# SerialROS

py_pubsub/: package.xml  setup.py
py_pubsub/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
py_pubsub/install/py_pubsub/lib/py_pubsub/: serial_publisher
py_pubsub/install/py_pubsub/share/py_pubsub/: package.sh  package.xml
py_pubsub/log/: latest_build
py_pubsub/py_pubsub/: serial_publisher.py
ros2_ws/src/py_pubsub/: package.xml  requirements.txt  setup.py
ros2_ws/src/py_pubsub/py_pubsub/: serial_publisher.py
