<?xml version="1.0"?>
<package format="3">
  <name>py_pubsub</name>
  <version>0.0.1</version>
  <description>UWB distance publisher using wheelchair_sensor_msgs</description>
  <maintainer email="poudell@lafayette.edu">Laxman Poudel</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>wheelchair_sensor_msgs</exec_depend>
</package>
