<?xml version="1.0"?>
<package format="3">
  <name>py_pubsub</name>
  <version>1.0</version>
  <description>UWB serial reader and ROS 2 publisher with CSV logging</description>
  <maintainer email="poudell@lafayette.edu">Laxman Poudel</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
